[package]
name = "max31865"
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>"]
keywords = ["embedded-hal-crate", "rtd-sensor"]
categories = ["embedded", "no-std", "hardware-support"]
description = "generic driver for the MAX31865 RTD to Digital converter"
documentation = "https://rudihorn.github.io/max31865/max31865/index.html"
repository = "https://github.com/rudihorn/max31865"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "0.1.2", features = ["unproven"] }

[dev-dependencies]
cortex-m = "0.4.3"
cortex-m-rt = "0.4.0"
panic-abort = "0.1.1"
ssd1306 = "0.1.0"
embedded-graphics = "0.1.1"
stm32f103xx-hal = { git = "https://github.com/ilya-epifanov/stm32f103xx-hal", branch = "i2c-support", features = ["rt"] }

[target.'cfg(unix)'.dev-dependencies]
linux-embedded-hal = { git = "https://github.com/japaric/linux-embedded-hal" }
