[package]
name = "max31865"
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>"]
keywords = ["embedded-hal-crate", "rtd-sensor"]
categories = ["embedded", "no-std", "hardware-support"]
description = "generic driver for the MAX31865 RTD to Digital converter"
documentation = "https://rudihorn.github.io/max31865/max31865/index.html"
repository = "https://github.com/rudihorn/max31865"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
embedded-hal = { version = "0.2.4", features = ["unproven"] }
cortex-m-semihosting = "0.3.3"

[target.thumbv7m-none-eabi.dev-dependencies]
cortex-m = "0.5.2"
cortex-m-rt = "0.5.1"
panic-halt = "0.2.0"
stm32f103xx-hal = { git = "https://github.com/japaric/stm32f103xx-hal", features = ["rt"] }

#[target.'cfg(unix)'.dev-dependencies]
#linux-embedded-hal = "0.2.0"

[features]
doc = []
